apps/environment-management/manifests/routes/auth-server.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: em-auth-server
  annotations:
    foo: bar
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: em-auth-server
      port: 8080
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          replacePrefixMatch: "/"
          type: "ReplacePrefixMatch"
    matches:
    - path:
        type: "PathPrefix"
        value: "/auth-server"
