apps/environment-management/manifests/routes/envoy.yaml
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "envoy"
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  # filters:
  #   - type: "URLRewrite"
  #     urlRewrite:
  #       path:
  #         replacePrefixMatch: "/"
  #         type: "ReplacePrefixMatch"
  rules:
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/pr-lti-gateway"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/deliver"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/hbl-be"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/ms-be"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/payments-be"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/portal-be"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/ss-be"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/sr-be"
  - backendRefs:
    - name: "envoy"
      port: 80
    matches:
    - path:
        type: "PathPrefix"
        value: "/studio-be"
  # - backendRefs:
    # - name: "envoy"
      # port: 8080
---
